--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^13.5.0",
     "async": "^3.2.4",
     "axios": "^1.4.0",
+    "docxtemplater": "^3.42.7",
     "history": "^5.3.0",
+    "pizzip": "^3.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.2.1",
